--- a/captcha_form/index.html
+++ b/captcha_form/index.html
@@ -202,7 +202,7 @@
 
 
                         <input type="submit" class="btn btn-success btn-send" value="Send message" onClick="validate()"/>
-                        <input type="checkbox" id="myBtn" onclick="checkClickFunc()">Are you a Human?
+                        <div id="message"><input type="checkbox" id="myBtn" onclick="checkClickFunc()">Are you a Human?</div>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -226,26 +226,36 @@ var gridColSize = 4;
 var checkedBefore = false;
 var listOfData = new Array();
 let imageName = undefined;
-let requestUrl = "http://7ac2-183-87-63-158.in.ngrok.io"
+let requestUrl = "http://7ac2-183-87-63-158.in.ngrok.io";
+let api_key = "920310e1-eb98-4cbf-bfa1-97c90e8baf44";
 
 function refreshCaptcha() {
     getCaptcha();
     showNewModal();
 }
 
+function disableCaptcha() {
+    document.getElementById("message").style.display = "none";
+}
+
 function getCaptcha() {
     $.ajax({
-        url: `${requestUrl}/captcha/`,
+        url: `${requestUrl}/captcha?api_key=${api_key}`,
         crossDomain: true,
         async: false,
         success: function(result) {
-            let obj = result["resp"]["images"];
-            imageName = result["resp"]["label"];
-            obj.forEach(element => {
-                let str = element["url"];
-                element["url"] = str.replace("http://localhost:3690/", `${requestUrl}/`);
-            });
-            listOfData = obj;
+            let status = result["status"];
+            if(status == 404) {
+                disableCaptcha();
+            } else if(status == 200) {
+                let obj = result["resp"]["images"];
+                imageName = result["resp"]["label"];
+                obj.forEach(element => {
+                    let str = element["url"];
+                    element["url"] = str.replace("http://localhost:3690/", `${requestUrl}/`);
+                });
+                listOfData = obj;
+            }
         },
         error: function(err) {
             console.log(`Exception for getCaptcha: ${JSON.stringify(err)} ::`);
@@ -261,12 +271,15 @@ function postCaptcha() {
         async: false,
         method: 'POST',
         data: {
+            api_key: api_key,
             images: listOfData,
         },
         success: function(result) {
             let humanCheckPassed = result["resp"]["humanCheckPassed"];
             let status = result["status"];
-            if(!humanCheckPassed || status != 200) {
+            if(status == 404) {
+                window.alert("Please enter the valid API KEY");
+            } else if(!humanCheckPassed || status != 200) {
                 getCaptcha();
                 showNewModal();
             }
@@ -359,7 +372,6 @@ function generateGrid() {
 }
 
 // Get the modal
-var trainedList = new Array().fill({});
 var modal = document.getElementById("myModal");
 var modalContentNode = document.getElementById("modalContent");
 var bodyNode = document.getElementById("innerBody");
