--- a/captcha_form/index.html
+++ b/captcha_form/index.html
@@ -249,9 +249,7 @@ function getCaptcha() {
         async: false,
         success: function(result) {
             let status = result["status"];
-            if(status == 404) {
-                disableCaptcha();
-            } else if(status == 200) {
+            if(status == 200) {
                 let obj = result["resp"]["images"];
                 imageName = result["resp"]["label"];
                 obj.forEach(element => {
@@ -259,9 +257,15 @@ function getCaptcha() {
                     element["url"] = str.replace("http://localhost:3690/", `${requestUrl}/`);
                 });
                 listOfData = obj;
+            } else {
+                console.log(`We got non 200 status ${status}.`);
             }
         },
         error: function(err) {
+            let status = err["status"];
+            if(status == 403) {
+                disableCaptcha();
+            }
             console.log(`Exception for getCaptcha: ${JSON.stringify(err)} ::`);
         }
     });
@@ -281,14 +285,16 @@ function postCaptcha() {
         success: function(result) {
             let humanCheckPassed = result["resp"]["humanCheckPassed"];
             let status = result["status"];
-            if(status == 404) {
-                window.alert("Please enter the valid API KEY");
-            } else if(!humanCheckPassed || status != 200) {
+            if(!humanCheckPassed || status != 200) {
                 getCaptcha();
                 showNewModal();
             }
         },
         error: function(err) {
+            let status = err["status"];
+            if(status == 403) {
+                console.log(`We got non 200 response ${status}.`);
+            }
             console.log(`Exception for postCaptcha: ${JSON.stringify(err)} ::`);
         }
     });
